--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/style.css">
-    <title>ANTONIO</title>
+    <title>Antonio Zuñiga - Inicio</title>
+    <meta name="description" content="Soy un analista desarrollador de sistemas cuyo objetivo es ayudar a las personas | Obtenga más información aquí.">
+    <meta name="keywords" content="Desarrollo de software, Soluciones tecnológicas, Innovación digital, Desarrollo a medida, Aplicaciones personalizadas, Transformación digital, Ingeniería de software, Diseño de software, Desarrollo ágil, Soluciones escalables, Consultoría tecnológica, Experiencia de usuario (UX), Integración de sistemas, Desarrollo frontend y backend, Programación a medida, Automatización de procesos, Desarrollo web y móvil, Tecnologías emergentes, Optimización de código, Mantenimiento y soporte técnico">
 </head>
 <body>
     <!-- HEADER -->
@@ -34,8 +36,8 @@
     <!-- MAIN -->
     <main class="main">
         <div class="container-principal">
-            <div class="container-img">
-                <img src="img/desarrollador.jpg" alt="">
+            <div class="container-img bounce-in-top">
+                <img src="./img/yo.svg" alt="fotoPerfil">
             </div>
             <h1>ANTONIO ZUÑIGA</h1>
             <h2>Analista Desarrollador de Software</h2>
