--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>ANTONIO - Contacto</title>
+    <title>Antonio Zuñiga - Contacto</title>
+    <meta name="description" content="Siempre estoy abierto a discutir trabajos de desarrollo de software u oportunidades de asociación.">
+    <meta name="keywords" content="Contacto, Soporte técnico, Consultas, Información de contacto, Comunicación, Colaboración, Consultoría tecnológica, Asistencia,
+    Servicio al cliente, Formulario de contacto, Colaboración empresarial, Solicitar presupuesto, Ayuda técnica, Equipo de ventas,
+    Atención al cliente, Comunicarse con nosotros, Reclamaciones, Preguntas frecuentes (FAQ), Soporte en línea, Asesoramiento personalizado
+    ">
 </head>
 <body>
     <!-- HEADER -->
@@ -33,7 +38,7 @@
 
     <!-- MAIN -->
     <main class="main">
-        <section class="contacto">
+        <section class="contacto jello-horizontal">
             <div class="contenido">
                 <h2>CONTACTO</h2>
                 <div class="col">
@@ -42,7 +47,7 @@
                     <input type="text" placeholder="Dirección de correo">
                     <input type="text" placeholder="Tema">
                     <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje"></textarea>
-                    <button>Enviar Mensaje</button>
+                    <button>ENVIAR MENSAJE</button>
                 </div>
             </div>
         </section>
