--- a/pages/habilitades.html
+++ b/pages/habilitades.html
@@ -9,7 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>ANTONIO - Habilidades</title>
+    <title>Antonio Zuñiga - Habilidades</title>
+    <meta name="description" content="Aquí hay algunos las herramientas que uso en mi trabajo diario.">
+    <meta name="keywords" content="Habilidades técnicas, Competencias profesionales, Conocimientos especializados, Aptitudes técnicas, Competencias digitales, Destrezas profesionales, Habilidades destacadas, Capacidades técnicas, Destrezas clave, Competencias técnicas, Habilidades especializadas, Pericia técnica, Habilidades blandas, Competencias personales, Aptitudes interpersonales, Habilidades de comunicación, Habilidades de resolución de problemas, Habilidades analíticas, Competencias creativas, Habilidades colaborativas">
 </head>
 <body>
     <!-- HEADER -->
@@ -35,7 +37,7 @@
 
     <!-- MAIN -->
     <main class="main">
-        <div class="habilidades">
+        <div class="habilidades scale-in-ver-top">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -44,13 +46,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/angular.png" class="d-block w-100" alt="...">
+                    <img src="../img/angular.png" class="d-block w-100" alt="angular">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/react.jpg" class="d-block w-100" alt="...">
+                    <img src="../img/react.jpg" class="d-block w-100" alt="react">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/nodejs.png" class="d-block w-100" alt="...">
+                    <img src="../img/nodejs.png" class="d-block w-100" alt="nodejs">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
