--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>ANTONIO - Sobre mi</title>
+    <title>Antonio Zuñiga - Sobre mi</title>
+    <meta name="description" content="Hola, soy Antonio un gusto conocerlo. Analizo e implemento sistemas maravillosamente y me encanta lo que hago.">
+    <meta name="keywords" content="Acerca de mí, Perfil profesional, Trayectoria personal, Historia profesional, Mi historia, Biografía, Valores personales, Objetivos profesionales, Filosofía de trabajo, Visión personal, Pasiones, Logros personales, Experiencia laboral, Educación, Intereses, Contribuciones profesionales, Descripción personal, Compromisos profesionales, Enfoque laboral,Aspiraciones profesionales">
 </head>
 <body>
     <!-- HEADER -->
@@ -38,7 +40,7 @@
                 <h2>Sobre Mí</h2>
             </div>
             <div class="descripcion">
-                <p><span>Hola, soy Antonio Zuñiga</span> desarrollador de software con experiencia en diseño, instalación, pruebas y mantenimiento de sistemas de software. Dominio de varias plataformas, lenguajes y sistemas integrados.</p>
+                <p><span>Hola, soy Antonio Zuñiga</span> inicie mi viaje como profesional hace 10 años, he realizado trabajos para agencias y he colaborado con personas talentosas para crear productos digitales para uso comercial.</p>
             </div>
 
             <div class="row">
@@ -47,15 +49,15 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            31/02/1999
+                            29 de Febrero
                         </li>
                         <li>
                             <strong>Movil</strong>
-                            987 654 321
+                            995 947 974
                         </li>
                         <li>
                             <strong>Email</strong>
-                            antonio@gmail.com
+                            antoniozr28@gmail.com
                         </li>
                         <li>
                             <strong>Website</strong>
@@ -75,35 +77,35 @@
                 <div class="column temasDeInteres">
                     <h3>Temas de Interes</h3>
                     <div class="intereses">
-                        <div class="interes">
+                        <div class="interes slide-in-top interes1">
                             <i class="fa-solid fa-gamepad"></i>
                             <span>JUEGOS</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes2">
                             <i class="fa-solid fa-headphones"></i>
                             <span>MUSICA</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes3">
                             <i class="fa-solid fa-plane"></i>
                             <span>VIAJAR</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes4">
                             <i class="fa-brands fa-apple"></i>
                             <span>MAC OS</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes5">
                             <i class="fa-solid fa-person-hiking"></i>
                             <span>DEPORTE</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes6">
                             <i class="fa-solid fa-book"></i>
                             <span>LIBROS</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes7">
                             <i class="fa-solid fa-car"></i>
                             <span>AUTOS</span>
                         </div>
-                        <div class="interes">
+                        <div class="interes slide-in-top interes8">
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
                         </div>
@@ -113,7 +115,7 @@
         
 
             <div class="descarga">
-                <button>
+                <button class="vibrate-1">
                     Descargar CV <i class="fa-solid fa-download"></i>
                     <span class="overlay"></span>
                 </button>
