mejoras para proyecto final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <div class="container-header">
         <header>
             <div class="logo">
-                <a href="#">ANTONIO</a>
+                <a href="../index.html">ANTONIO</a>
             </div>
             <nav id="nav" class="nav">
                 <ul>
@@ -41,13 +41,34 @@
         <section class="contacto jello-horizontal">
             <div class="contenido">
                 <h2>CONTACTO</h2>
-                <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
-                    <input type="text" placeholder="Número telefónico">
-                    <input type="text" placeholder="Dirección de correo">
-                    <input type="text" placeholder="Tema">
-                    <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje"></textarea>
-                    <button>ENVIAR MENSAJE</button>
+                <div class="fila">
+                    <div class="col">
+                        <input type="text" placeholder="Tú Nombre">
+                        <input type="text" placeholder="Número telefónico">
+                        <input type="text" placeholder="Dirección de correo">
+                        <input type="text" placeholder="Tema">
+                        <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje"></textarea>
+                        <button>ENVIAR MENSAJE</button>
+                    </div>
+                    <div class="col">
+                        <div class="datos">
+                            
+                            <ul>
+                                <li>
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    Ubicacion: Lima-Peru
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-mobile-screen"></i>
+                                    Llamame al: 995 456 312
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-envelope"></i>
+                                    Email: antoniozr28@gmail.com
+                                </li>
+                            </ul>    
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
