--- a/pages/curriculum.html
+++ b/pages/curriculum.html
@@ -17,7 +17,7 @@
     <div class="container-header">
         <header>
             <div class="logo">
-                <a href="#">ANTONIO</a>
+                <a href="../index.html">ANTONIO</a>
             </div>
             <nav id="nav" class="nav">
                 <ul>
